Revert "Fixed different spacing height in IE and Opera #8294". Was causing too many other tests to fail.

--- a/WebContent/VAADIN/themes/reindeer/layouts/layouts.scss
+++ b/WebContent/VAADIN/themes/reindeer/layouts/layouts.scss
@@ -35,11 +35,6 @@
 	width: 6px;
 }
 
-.v-ie .v-spacing,
-.v-op .v-spacing {
-    height: 4px;
-}
-
 /* Blue background */
 .v-verticallayout-blue,
 .v-horizontallayout-blue,
